2006-03-22  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: handle repositories
	* 
	* src/DataViews/_SourceView.py: handle drag and drop
	* src/DataViews/_PersonView.py: handle drag and drop
	* src/ViewManager.py: pychecker fixes
	* src/RelLib/_Person.py: pychecker fixes
	* src/RelLib/_Date.py: pychecker fixes
	* src/RelLib/_Family.py: pychecker fixes
	* src/RelLib/_Note.py: pychecker fixes
	* src/RelLib/_EventRef.py: pychecker fixes
	* src/PeopleModel.py: pychecker fixes
	* src/DisplayModels.py: pychecker fixes 
	* src/DisplayTabs.py: allow a display tab to handle other dnd types other
	than the default. This allows reference tabs to catch their sources. SourceTab
	can now handle catching both a sourceref and a source, for example.
	* src/Utils.py: pychecker
	* src/NameDisplay.py: pychecker
	* src/ScratchPad.py: unified dnd handling with rest of system.
	* src/DdTargets.py: support for new types (refs and handles)
	* src/DateEdit.py: pychecker
	* src/ListModel.py: pychecker
	* src/gramps_main.py: pychecker
	* src/BaseDoc.py: pychecker
	* src/SelectSource.py: pychecker
	* src/ImgManip.py: pychecker
	* src/PageView.py: drag-n-drop fixes

2006-03-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Utils.py: Add wrappers for displaying the tuple types
	* src/DataViews/_PedigreeView.py,
	* src/PluginUtils/_ReportUtils.py,
	* src/DisplayModels.py,
	* src/DisplayTabs.py,
	* src/ScratchPad.py: Use the new wrapers
	
2006-03-21  Don Allingham  <don@gramps-project.org>
	* src/Config/_GramspGconfKeys.py: family_warn flag
	* src/Config/_GramspIniKeys.py: family_warn flag
	* src/Editors/_EditFamily.py: display family_warn dialog
	* src/glade/gramps.glade: family warn dialog
	* src/DisplayTabs.py: Send Attribute instead of None for new
	object
	* src/Editors/_EditAddress.py: specify callback

2006-03-21  Alex Roitman  <shura@gramps-project.org>
	* various: rename doc to data; move most of src/data to data.

2006-03-20  Don Allingham  <don@gramps-project.org>